styles.css
:root{
    --gray-bg: #EFF5F5;
    --gray-shadow: #D6E4E5;
    --orange-accent: #EB6440;
}

body, html{
    font-family: Manrope, Arial, sans-serif;
    box-sizing: border-box;
    margin: 0;
    min-width: fit-content;
    overflow-x: hidden;
}

/* utility */

.ml-350{
    margin-left: 350px;
}

.mt-0{
    margin-top: 0;
}

.ml{
    margin-left: 65px;
}

.icon{
    height: 100px;
}

.sm-icon{
    height: 25px;
    margin-top: 5px;
}

.xs-icon{
    height: 20px;
    margin-top: 5px;
}

.bold-txt{
    font-size: 1.2rem;
    font-weight: 500;
}

.bold-txt-sm{
    font-size: 1.2rem;
    color: var(--orange-accent);
}

.bg-gray{
    background-color: var(--gray-bg);
}

.ml-5{
    margin-left: 4px;
}

/* header */

a:hover{
    color: var(--orange-accent);
}

.container-fluid{
    display: flex;
    justify-content: flex-end;
    position: relative;
}

.navbar-nav{
    display: flex;
    gap: 20px;
    margin: 0px 50px 12px 0;
}

.nav-hidden{
    visibility: hidden;
}

.nav-menu-hidden{
    position: fixed;
    right: -100%;
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 50px 100px 0 100px;
    height: 100%;
    background-color: var(--gray-bg);
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}

.nav-menu-hidden > a{
    width: 100%;
    font-size: 2rem;
}

.logo-link{
    position: absolute;
}

.logo-img{
    height: 212px;
    margin: 10px 0 0 69px;
}

/* burger */

.burger{
    display: none;
    margin: 10px 25px 10px 10px;
    z-index: 2;
}
.burger-active{
    position: fixed;
    margin: 10px 25px 10px 10px;
    z-index: 2;
}
.burger-fixed{
    position: fixed;
}
.burger-active .bar:nth-child(3){
    rotate: 90deg;
}
.burger-active .bar:nth-child(2){
    rotate: -90deg;
    transform: translateY(10px) translateX(-8px);
}
.burger-active .bar:nth-child(1){
    rotate: 90deg;
    transform: translateY(-20px) translateX(16px);
}

.bar{
    display: block;
    width: 40px;
    height: 3px;
    margin: 5px auto;
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
    background-color: black;
  }

/* home */

.home{
    margin-top: 180px;
}

h1{
    font-size: 4rem;
    font-weight: 400;
    margin: 20px 0 0 70px;
}

.white-text{
    color: var(--gray-bg);
    padding-bottom: 5px;
}

.bg-orange{
    background-color: var(--orange-accent);
    width: 810px
}

h2{
    color: var(--orange-accent);
    font-weight: 400;
}

/* profile section */

.black-block{
    height: 283px;
    width: 766px;
    top: 508px;
    left: 50px;
    max-width: 100%;
    position: absolute;
    background-color: black;
    z-index: -1;
}

.card{
    display: flex;
    justify-content: space-between;
    background-color: white;
    width: 700px;
    margin: 30px 50px 50px;
    padding: 20px;
    border-top: 2px solid var(--gray-bg);
    border-left: 8px solid var(--gray-bg);
}

a{
    color: black;
    margin: 0 5px; 
}

.flex-span{
    margin-top: 10px;
    display: flex;
    align-items: center;
}

/* education section */

.header-container{
    display: flex;
    align-items: center;
}

.education-header{
    margin-top: 95px;

}

.card-header{
    margin-left: 0;
}

.card-col{
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: flex-start;
}

.avatar {
height: 200px;
width: 200px;
margin: 5px;
}

.navlink{
 text-decoration: none;
 color: black;
 margin-top: 10px;
 font-size: 2rem;
}

/* projects section */

.project-header{
    font-size: 3rem;
    color: var(--orange-accent);
}

.project-title{
    font-size: 1.6rem;
    font-weight: 500;
}

.project-img{
    height: 300px;
    border-radius: 3px;
    -webkit-box-shadow: 3px 3px 15px -9px var(--gray-shadow); 
    box-shadow: 3px 3px 15px -5px var(--gray-shadow);
}

.project-card{
    width: 1300px;
    display: flex;
    word-wrap:normal
}

.stack-tag{
    padding: 5px 10px 5px 10px;
    display: inline-block;
    margin: 2px 0;
    border: 2px solid black;
    text-decoration: none;
}

span{    
    white-space: nowrap;
}

.btn-link{
    padding: 5px 10px 5px 10px;
    border: 2px solid black;
    transition: all 0.1s ease-in-out;
    text-decoration: none;
}

/* contact section */

#contact{
    margin: 80px 0 50px;
}

.contact-container{
    display: flex;
    /* margin: 70px; */
    gap: 90px;
    width: 100%;
}

.contact-inner-container{
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
}

.contact-icon{
    height: 70px;
}
.contact-icon-sm{
    height: 50px;
}

.mail-icon{
    margin-bottom: -13px;
}

/* footer */

footer{
    background-color: var(--gray-bg);
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    color: gray;
}

@media (max-width: 1000px){

    .logo-img{
    margin: 10px 0 0 50px;
    }

    .btn-link{
        font-size: 1.3rem;
    }

    p{
        font-size: 1.5rem;
    }

    .xs-icon{
        height: 30px;
    }

    h1{
        font-size: 6rem;
        margin: 20px 0 0 50px;
    }

    h2{
        font-size: 2.2rem;
    }

    h3{
        font-size: 2.6rem;
        margin: 2px 0 0 55px;
    }

    .bold-txt{
        font-size: 1.7rem;
    }

    .contact-container{
        gap: 50px;
    }

    .black-block{
        height: 522px;
        width: 770px;
        top: 622px;
        left: 52px;
        max-width: none;
        position: absolute;
        background-color: black;
        z-index: -1;
    }

    .project-title{
        font-size: 2rem;
        font-weight: 500;
    }
}

@media (max-width: 740px){
    .navbar-nav{
        visibility: hidden;
    }
    .black-block{
        height: 670px;
        width: 720px;
        top: 622px;
        left: 51px;
        max-width: none;
        position: absolute;
        background-color: black;
        z-index: -1;
    }
    .card{
        width: 650px;
        flex-direction: column;
    }
    .burger{
        display: inline-block;
        position: absolute;
        z-index: 2;
    }

}

